Create views based in the wireframe

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,104 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.user-card {
+  display: flex;
+  flex-direction: row;
+  width: 70%;
+  margin: 0 auto;
+  padding-top: 40px;
+  gap: 20px;
+}
+
+.photo {
+  width: 25%;
+  align-self: center;
+}
+
+.user-photo {
+  width: 100%;
+}
+
+.user-info {
+  width: 100%;
+  border: solid 2px black;
+}
+
+.user-info > a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.name {
+  font-size: 2em;
+  text-decoration: none;
+  margin: 20px;
+  color: black;
+}
+
+.post-numbers {
+  margin: 20px;
+  text-align: right;
+}
+
+.bio {
+  width: 70%;
+  margin: 0 auto;
+  padding-top: 15px;
+}
+
+.user-last-posts {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.user-post {
+  padding-top: 20px;
+}
+
+.user-post > a {
+  text-decoration: none;
+  color: black;
+}
+
+.user-post > h4 {
+  padding-bottom: 10px;
+}
+
+.button-container {
+  width: 70%;
+  margin: 0 auto;
+  text-align: center;
+  padding: 20px 0;
+}
+
+.see-posts {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  border: 1px solid black;
+}
+
+.counters {
+  text-align: right;
+  margin-right: 20px;
+}
+
+.comments-post {
+  padding: 10px 0 5px 0;
+}
+
+.solo-post {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.header-solo-post {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0 15px;
+}
