--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -137,7 +137,7 @@
   margin-bottom: 10px;
 }
 
-#post_text{
+#post_text {
   padding: 20px 10px;
 }
 
@@ -148,13 +148,14 @@
   border-radius: 4px 4px 4px 4px;
   margin-bottom: 18px;
   padding: 12px 25px 12px 24px;
-  -moz-box-shadow: 3px 3px 1px 1px #CCCCCC;
-  -webkit-box-shadow: 3px 3px 1px 1px #CCCCCC;
-  box-shadow: 3px 3px 1px 1px #CCCCCC;
+  -moz-box-shadow: 3px 3px 1px 1px #ccc;
+  -webkit-box-shadow: 3px 3px 1px 1px #ccc;
+  box-shadow: 3px 3px 1px 1px #ccc;
 }
+
 .alert-success {
-  background-color: #66E167;
-  border-color: #D6E9C6;
+  background-color: #66e167;
+  border-color: #d6e9C6;
   width: 280px;
   color: black;
   padding-top: 20px;
