--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -155,7 +155,7 @@
 
 .alert-success {
   background-color: #66e167;
-  border-color: #d6e9C6;
+  border-color: #d6e9c6;
   width: 280px;
   color: black;
   padding-top: 20px;
