--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -67,6 +67,13 @@
   padding-bottom: 10px;
 }
 
+.buttons-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0% 45%;
+}
+
 .button-container {
   width: 70%;
   margin: 0 auto;
@@ -108,7 +115,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding-top: 20px;
+  padding: 2% 35%;
 }
 
 .add-post {
