--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,9 +23,16 @@
       </div>
     <%end%>
   </div>
-  <div class="button-container">
-    <%= link_to user_posts_path(@user.id), class: "see-posts" do%>
-    See all posts
-    <%end%>
+  <div class="buttons-container">
+    <div class="button-container">
+      <%= link_to user_posts_path(@user.id), class: "see-posts" do%>
+      See all posts
+      <%end%>
+    </div>
+    <div class="button-container">
+      <%= link_to users_path, class: "see-posts" do%>
+      Back
+      <%end%>
+    </div>
   </div>
 <section>
