Fix N+1 query problems

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="solo-post">
   <div class="header-solo-post">
-    <h2>Post #<%=@post.id%> <%=@post.author.name%> </h2>
+    <h2><%=@post.title%> <%=@post.author.name%> </h2>
     <p> Comments: <%=@post.comments_counter%> Likes: <%=@post.likes_counter%></p>
   </div>
   <p><%=@post.text%></p>
