--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,32 +5,33 @@
     </div>
     <div class="user-info">
       <%= link_to user_path(@user.id) do%>
-        <h2 class="name"><%= @user.name %></h2>
-      <% end %>
-      <p class="post-numbers"> Number of post: <%= @user.post_counter %> </p> 
+        <h2 class="name"><%=@user.name%></h2>
+      <%end%>
+      <p class="post-numbers"> Number of post: <%=@user.post_counter%> </p> 
     </div>
   </div>
-
   <div class="bio">
     <h4> Bio: </h4>
-    <p><%= @user.bio %>
+    <p><%= @user.bio%>
   </div>
   <div class="user-last-posts">
-    <%@user.recent_posts.each_with_index do |post, idx|%>
+    <%@user.recent_posts.includes(:author).each_with_index do |post, idx|%>
       <div class="user-post">
-        <h4>Post # <%= idx + 1 %></h4>
+        <%=link_to user_post_path(post.author.id, post.id) do%>
+          <h4><%=post.title%></h4>
+        <%end%>
         <p><%=post.text%></p>
       </div>
     <%end%>
   </div>
   <div class="buttons-container">
     <div class="button-container">
-      <%= link_to user_posts_path(@user.id), class: "see-posts" do%>
+      <%=link_to user_posts_path(@user.id), class: "see-posts" do%>
       See all posts
       <%end%>
     </div>
     <div class="button-container">
-      <%= link_to users_path, class: "see-posts" do%>
+      <%=link_to users_path, class: "see-posts" do%>
       Back
       <%end%>
     </div>
