--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
   <%@posts.each_with_index do |post, idx|%>
     <div class="user-post">
       <%= link_to user_post_path(post.author.id, post.id) do%>
-        <h4>Post # <%= idx + 1 %></h4>
+        <h4><%=post.title%></h4>
       <%end%>
       <p><%=post.text%></p>
       <p class="counters"> Comments: <%=post.comments_counter%> Likes: <%=post.likes_counter%>
