--- a/app/views/shared/_user.html.erb
+++ b/app/views/shared/_user.html.erb
@@ -3,7 +3,7 @@
     <img class="user-photo" src=<%=user.photo%>>
   </div>
   <div class="user-info">
-    <%= link_to user_path(user.id) do%>
+    <%= link_to user_path(user.id), id: 'user-link' do%>
       <h2 class="name"><%= user.name %></h2>
     <% end %>
     <p class="post-numbers"> Number of post: <%= user.post_counter %> </p> 
