--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,13 +1,19 @@
-<div class="form">
-
-<h1>Comment</h1>
-
-<%= form_with model: [:user, :post, @comment] do |form|%>
-  <div>
-    <%= form.label :text%> <br>
-    <%= form.text_area :text%>
-  </div>
-
-  <%= form.submit%>
-<%end%>
+<div class="newpost">
+  <h1>New Comment</h1>
+  <% flash.each do |type, msg| %>
+    <div>
+    <%= msg if type="error" %>
+    </div>
+  <% end %>
+  <%= form_with model: comment, url: comment_path, method: :post, local: true, scope: :comment do |f| %>
+    <div>
+      <%= f.label :text %><br>
+      <%= f.text_area :text, :cols => 60, :rows => 4 %>
+    </div>
+    <%= f.submit "Add Comment" , class: "submit" %>
+  <% end %>
+</div>
+<div class="mylinks">
+  <div><%= button_to "Home", root_path, method: :get %></div>
+  <div><%= button_to "Logout", destroy_user_session_path, method: :delete, data: { turbo: false } %></div>
 </div>
