--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,16 +1,24 @@
-<div class="form">
-  <h1>New post</h1> 
-  <%= form_with model: @post do |form|%>
+<div class="newpost">
+  <h1>New Post</h1>
+  <% flash.each do |type, msg| %>
     <div>
-      <%= form.label :title%> <br>
-      <%= form.text_field :title%>
+    <%= msg if type="error" %>
+    </div>
+  <% end %>
+  <%= form_with model: post, url: posts_path, method: :post, local: true, scope: :post do |f| %>
+    <div>
+      <%= f.label :title %><br>
+      <%= f.text_field :title, :size => 60 %>
+    </div>
+    <div>
+      <%= f.label :text %><br>
+      <%= f.text_area :text, :cols => 60, :rows => 10 %>
     </div>
 
-    <div>
-      <%= form.label :text%> <br>
-      <%= form.text_area :text%>
-    </div>
-
-    <%= form.submit%>
-  <%end%>
+    <%= f.submit "Add Post" , class: "submit" %>
+  <% end %>
+</div>
+<div class="mylinks">
+  <div><%= button_to "Home", root_path, method: :get %></div>
+  <div><%= button_to "Logout", destroy_user_session_path, method: :delete, data: { turbo: false } %></div>
 </div>
