--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,25 +1,24 @@
-<div class="solo-post">
-  <div class="header-solo-post">
-    <h2><%=@post.title%> <%=@post.author.name%> </h2>
-    <p> Comments: <%=@post.comments_counter%> Likes: <%=@post.likes_counter%></p>
+<h1 class="hidden">Here is post NN from user XX!</h1>
+<div class="onepost">
+  <div class="titlepost">
+    <p><%= @post.title %> by <%= @user.name %></p>
+    <p><%= @post.text %></p>
   </div>
-  <p><%=@post.text%></p>
-  <%@comments.each do |comment|%>
-    <div class="comments-post">
-      <p><%=comment.author.name%>: <%= comment.text %></p>
-    </div>
-  <%end%>
-  <div class="button-container-flex">
-    <%=link_to new_user_post_comment_path(@post.author.id, @post.id), class: "see-posts" do%>
-      Add new comment
-    <%end%>
-    <div class="button-container">
-      <%= link_to user_posts_path, class: "see-posts" do%>
-      Back
-      <%end%>
-    </div>
-    <%=form_with url: user_post_likes_path(@post.author, @post) do |form|%>
-      <%= form.submit "❤️ Like", class: "like-btn" %>
-    <%end%>
+  <div class="commentslikes2">
+    <%= link_to 'New Comment', "/users/#{ @user.id }/posts/#{ @post.id }/new_comment" %>
+    / <%= button_to 'Like', "/users/#{ @user.id }/posts/#{ @post.id }/like", { class: "buttonlink" } %><br>
+    Comments: <%= @post.comments_counter %>, 
+    Likes: <%= @post.likes_counter %>
   </div>
+</div>
+<% if @post.comments != [] %>
+  <div class="comments">
+    <% @post.comments.each do |comment| %>
+        <%= User.find(comment.author_id).name %>: <%= comment.text %><br>
+    <% end %>
+  </div>
+<% end %>
+<div class="mylinks">
+  <div><%= button_to "Home", root_path, method: :get %></div>
+  <div><%= button_to "Logout", destroy_user_session_path, method: :delete, data: { turbo: false } %></div>
 </div>
