--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,7 +5,7 @@
     <%= msg if type="error" %>
     </div>
   <% end %>
-  <%= form_with model: post, url: posts_path, method: :post, local: true, scope: :post do |f| %>
+  <%= form_with model: post, url: post_path, method: :post, local: true, scope: :post do |f| %>
     <div>
       <%= f.label :title %><br>
       <%= f.text_field :title, :size => 60 %>
