--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -142,6 +142,7 @@ input {
   padding: 0 !important;
   margin: 0 !important;
   font-family: 'Times New Roman', Times, serif;
+  font-size: 12px !important;
   color: #069;
   text-decoration: underline;
   cursor: pointer;
@@ -194,4 +195,22 @@ input {
 
 .small {
   font-size: 14px;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+}
+
+.threelinks {
+  display: flex;
+}
+
+.onecomment {
+  display: flex;
+  justify-content: space-between;
+}
+
+.deletecomment {
+  font-size: 12px;
 }
